@@ -1,6 +1,10 @@
 lmbench (3.0-a9+debian.1-1) UNRELEASED; urgency=medium
 
   * Acknowledge NMUs, thanks Andreas!
+  * Use upstream tarball as orig.tar.gz. This appends a +debian.1 to the
+    upstream version to avoid conflicting with the previous orig.tar.gz.
+    The previous orig.tar.gz was a tarball that contained the upstream
+    tarball, which had to be unpacked prior to build in debian/rules.
 
  -- dann frazier <dannf@debian.org>  Tue, 12 Sep 2017 15:45:03 -0600
 
